<resources>
    <string name="app_name">AD-SURAKSHA</string>
    <string name="firebase_path" translatable="false">labourshelter</string>
    <string name="firebase_email" translatable="false">abc@gmail.com</string>
    <string name="firebase_password" translatable="false">654321</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Phone No.</string>
    <string name="hint_otp">enter OTP</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member ? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password </string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="note"> NOTE : driver location is shown only when the driver is in online. </string>
    <string name="QUOT">“The greatest compassion is the prevention of human suffering through patience, alertness, courage and kindness.”</string>
    <string name="home_second">Home Second</string>
    <string name="welcome">Welcome to Suraksha !</string>
    <string name="pm_funds">PM funds</string>
    <string name="do_s_don_ts"><![CDATA[Do\'s & Don\'ts]]></string>
    <string name="statistics">Statistics</string>
    <string name="q_a">Q/A</string>
    <string name="symptoms">Symptoms</string>
    <string name="labour_shelter">Labour Shelter</string>
    <string name="cases_near_you">Cases near you</string>
    <string name="hospitals">Hospitals</string>
    <string name="covid_19_status_in_india">COVID-19 STATUS IN INDIA</string>
    <string name="refresh">...</string>
    <string name="comfirmed">CONFIRMED</string>
    <string name="active">ACTIVE</string>
    <string name="recovered">RECOVERED</string>
    <string name="deaths">DEATHS</string>
    <string name="home">HOME</string>
    <string name="online_learning">Online Learning</string>
    <string name="counselling">Counselling</string>
    <string name="emergency_tollfree">Emergency Tollfree</string>
    <string name="volunteers_near_you">Volunteers near You</string>
    <string name="save_our_soul">Save Our Soul</string>
    <string name="contacts_us">Contact Us</string>
    <string name="migrant_workers">Migrant Workers</string>
    <string name="free_grocery_outlets">Free Grocery Outlets</string>
    <string name="volunteer_registration">Volunteer Registration</string>
    <string name="drm">DRM</string>
    <string name="message">Messages</string>
    <string name="covid_19_state">COVID-19 STATUS STATE WISE</string>
    <string name="notenearby">locations are shown with in 5Km radius
    please be alert and follow safety measures.</string>
    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="full_name">Full Name</string>
    <string name="aadhar_no">Aadhar NO.</string>
    <string name="phone_no">Phone NO.</string>
    <string name="address">Address</string>
    <string name="msg">Sraksha is an important step in our fight against COVID-19.By leveraging technology,it provides important information .As more and more people use it,it\'s effectiveness will increase.</string>
    <string name="hotel"><![CDATA[Standard Operation Procedure for Hotels & Hospitality]]></string>
    <string name="reg">Standard Operation Procedure for Religious Place</string>
    <string name="rest">Standard Operation Procedure for Restaurants</string>
    <string name="office">Standard Operation Procedure for Office</string>
    <string name="air">Standard Operation Procedure for Air Passengers</string>
    <string name="team_suraksha">TEAM SURAKSHA</string>
    <string name="alertcall">Are you sure you wanted to call emergency ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Are you sure you wanted to exit ?</string>
    <string name="first_responders">First Responders</string>
    <string name="msme">MSME</string>
    <string name="health_assessment">Health Assessment</string>
    <string name="a">Hi \nPlease give information about your \n current health condition</string>
    <string name="b">a) Cough\nb) Fever\nc) Difficulty\nd) loss of senses of smell and taste \ne) None of above</string>
    <string name="c">How you ever had any of the following</string>
    <string name="d">a) Diabetes\nb)Hypertension\nc) Lung disease\nd) Heart Disease\ne) Kidney Disorder\nf) None of above</string>
    <string name="e">Which of the following applies to you</string>
    <string name="f">a) Traveled internationally in the last \n14 days\nb) Recently interacted orr lived or currently lived\nwith someone who has tested positive\nc) Am a healthcare worker\nd) None of above</string>
    <string name="g">Thank You for assessment\nYour information will validate\n an reach you</string>
    <string name="type_a_message">Type a message...</string>
    <string name="health_care">Health care</string>
    <string name="fire_stations">Fire Stations</string>
    <string name="ambulance">Ambulance</string>
    <string name="medicals_stores">Medicals Stores</string>
    <string name="labs_results"><![CDATA[Labs & Results]]></string>
    <string name="police_station">Police Station</string>
    <string name="alertcallpolice">Are you sure you wanted to call police station ?</string>
    <string name="alertcallfire">Are you sure you wanted to call fire station ?</string>
    <string name="alertcallamb">Are you sure you wanted to call ambulance ?</string>
</resources>
