<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6"
    >

<ScrollView
    android:id="@+id/body_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:padding="7dp"
            android:textStyle="bold"
            android:textColor="#070707"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rec"
            android:text="@string/a">

        </TextView>

        <TextView
            android:padding="7dp"
            android:textStyle="bold"
            android:textColor="#070707"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rec"
            android:text="@string/b">

        </TextView>

        <TextView
            android:padding="7dp"
            android:id="@+id/a"
            android:textColor="#3C3B3B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_gravity="right"
            android:visibility="invisible"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/re">

        </TextView>
        <TextView
            android:padding="7dp"
            android:id="@+id/one"
            android:textStyle="bold"
            android:textColor="#070707"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rec"
            android:visibility="invisible"
            android:text="@string/c">

        </TextView>
        <TextView
            android:padding="7dp"
            android:id="@+id/two"
            android:textStyle="bold"
            android:textColor="#070707"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:background="@drawable/rec"
            android:text="@string/d">

        </TextView>
        <TextView
            android:padding="7dp"
            android:id="@+id/b"
            android:textColor="#3C3B3B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:background="@drawable/re"
            android:text="">

        </TextView>
        <TextView
            android:padding="7dp"
            android:id="@+id/three"
            android:textStyle="bold"
            android:textColor="#070707"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rec"
            android:text="@string/e">

        </TextView>
        <TextView
            android:padding="7dp"
            android:textStyle="bold"
            android:textColor="#070707"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/four"
            android:visibility="invisible"
            android:background="@drawable/rec"
            android:text="@string/f">

        </TextView>
        <TextView
            android:padding="7dp"
            android:id="@+id/c"
            android:textColor="#3C3B3B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:background="@drawable/re">

        </TextView>
        <TextView
            android:padding="7dp"
            android:id="@+id/five"
            android:layout_marginBottom="80dp"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="#070707"
            android:background="@drawable/rec"
            android:text="@string/g">

        </TextView>


    </LinearLayout>
</ScrollView>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:padding="5dp"
        android:id="@+id/bottom"
        android:background="@drawable/rectchart"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="200dp"
            android:id="@+id/text_send"
            android:layout_marginLeft="8dp"
            android:background="@android:color/transparent"
            android:hint="@string/type_a_message"
            android:layout_toLeftOf="@id/btn_send"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_send_black_24dp"
            android:id="@+id/btn_send"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

</RelativeLayout>