<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:layout_marginBottom="@android:dimen/app_icon_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/pol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:src="@drawable/police"
                android:layout_width="60dp"

                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:padding="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:lines="1"
                android:autoSizeTextType="uniform"
                android:gravity="center_horizontal"
                android:text="@string/police_station"
                android:textColor="@android:color/black" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:id="@+id/fir"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:src="@drawable/fire"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:padding="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:text="@string/fire_stations"
                android:textColor="@android:color/black" />

        </LinearLayout>



        <LinearLayout

            android:layout_width="0dp"
            android:id="@+id/amb"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:src="@drawable/ambulance"
                android:layout_width="55dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:text="@string/ambulance"
                android:textColor="@android:color/black" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>