<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="8dp"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/profile_image"
                android:layout_marginLeft="125dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/defaultpic"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="35dp"
                android:layout_marginLeft="193dp"
                android:layout_marginTop="113dp"
                android:layout_height="35dp"
                android:id="@+id/profile_edit"
                android:src="@mipmap/ic_launchercamera_round"/>




        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:text="@string/full_name"
                android:textColor="@color/input_login"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="60dp"
                android:layout_height="1dp"
                android:background="@color/GRAY" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:text="@string/aadhar_no"
                android:textColor="@color/input_login"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/roll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="60dp"
                android:layout_height="1dp"
                android:background="@color/GRAY" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:drawableLeft="@drawable/ic_home_black_24dp"
                android:text="@string/address"
                android:textColor="@color/input_login"
                android:textSize="18sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="5dp"
                    android:textAllCaps="true"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="60dp"
                android:layout_height="1dp"
                android:background="@color/GRAY" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_phone_black_24dp"
                android:text="@string/phone_no"
                android:textColor="@color/input_login"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="60dp"
                android:layout_height="1dp"
                android:background="@color/GRAY" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>